# psychmet-educational-chatbot

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt  sample_evaluation_questions.json  setup.py
.devcontainer/: devcontainer.json
docs/: ragas_implementation.md  setup_guide.md
evaluation_results/: evaluation_dataset_20250906_045943.json  evaluation_report_20250906_050555.txt  ragas_results_20250906_050555.json
examples/: basic_usage.py  ragas_demo.py
scripts/: run_ragas_evaluation.py
src/psychmet_chatbot/: __init__.py  app.py  chatbot.py  cli.py  config.py  document_processor.py  evaluation.py  ragas_integration.py  vector_store.py
